log: Session 23 - the JVM memory budget, G1, Jaeger's bound, and 1,000 users